--- a/Workshop_App/WorkshopProgram.ui
+++ b/Workshop_App/WorkshopProgram.ui
@@ -38,7 +38,7 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout">
              <item>
-              <widget class="QLabel" name="keywordLabel">
+              <widget class="QLabel" name="labelPhrase">
                <property name="font">
                 <font>
                  <pointsize>18</pointsize>
@@ -53,11 +53,47 @@
               </widget>
              </item>
              <item>
-              <widget class="QLineEdit" name="keywordInputField">
+              <widget class="QLineEdit" name="lineEditPhrase">
                <property name="font">
                 <font>
                  <pointsize>18</pointsize>
                 </font>
+               </property>
+               <property name="placeholderText">
+                <string>Leave this field blank to search ALL workshops.</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="labelWorkshopID">
+               <property name="font">
+                <font>
+                 <pointsize>18</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Session ID:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEditWorkshopID">
+               <property name="maximumSize">
+                <size>
+                 <width>125</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="font">
+                <font>
+                 <pointsize>18</pointsize>
+                </font>
+               </property>
+               <property name="inputMask">
+                <string/>
+               </property>
+               <property name="maxLength">
+                <number>6</number>
                </property>
               </widget>
              </item>
@@ -76,7 +112,7 @@
             </layout>
            </item>
            <item>
-            <widget class="QRadioButton" name="radioUseDate">
+            <widget class="QCheckBox" name="checkBoxUseDate">
              <property name="font">
               <font>
                <pointsize>18</pointsize>
@@ -118,10 +154,24 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_3">
              <item>
-              <widget class="QCalendarWidget" name="calendarWidget_StartDate"/>
+              <widget class="QCalendarWidget" name="calendarWidget_StartDate">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+              </widget>
              </item>
              <item>
-              <widget class="QCalendarWidget" name="calendarWidget_EndDate"/>
+              <widget class="QCalendarWidget" name="calendarWidget_EndDate">
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -148,7 +198,7 @@
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioWsName">
+                <widget class="QCheckBox" name="checkBoxWsName">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
@@ -160,28 +210,22 @@
                  <property name="checked">
                   <bool>true</bool>
                  </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
-                 </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioWsID">
+                <widget class="QCheckBox" name="checkBoxWsID">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
                   </font>
                  </property>
                  <property name="text">
-                  <string>Workshop ID</string>
-                 </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
+                  <string>Session ID</string>
                  </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioWsURLs">
+                <widget class="QCheckBox" name="checkBoxWsURL">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
@@ -190,13 +234,10 @@
                  <property name="text">
                   <string>Workshop URLs</string>
                  </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
-                 </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioPartNumbers">
+                <widget class="QCheckBox" name="checkBoxWsPartNumbers">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
@@ -205,13 +246,10 @@
                  <property name="text">
                   <string>Participant Numbers</string>
                  </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
-                 </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioWsStartDate">
+                <widget class="QCheckBox" name="checkBoxWsStartDate">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
@@ -219,9 +257,6 @@
                  </property>
                  <property name="text">
                   <string>Start Date</string>
-                 </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
                  </property>
                 </widget>
                </item>
@@ -261,56 +296,38 @@
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioNames">
+                <widget class="QCheckBox" name="checkBoxNames">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
                   </font>
-                 </property>
-                 <property name="layoutDirection">
-                  <enum>Qt::LeftToRight</enum>
                  </property>
                  <property name="text">
                   <string>Names</string>
                  </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
-                 </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioEmails">
+                <widget class="QCheckBox" name="checkBoxEmails">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
                   </font>
-                 </property>
-                 <property name="layoutDirection">
-                  <enum>Qt::LeftToRight</enum>
                  </property>
                  <property name="text">
                   <string>Emails</string>
                  </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
-                 </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioSchool">
+                <widget class="QCheckBox" name="checkBoxSchools">
                  <property name="font">
                   <font>
                    <pointsize>18</pointsize>
                   </font>
                  </property>
-                 <property name="layoutDirection">
-                  <enum>Qt::LeftToRight</enum>
-                 </property>
                  <property name="text">
-                  <string>School</string>
-                 </property>
-                 <property name="autoExclusive">
-                  <bool>false</bool>
+                  <string>Schools</string>
                  </property>
                 </widget>
                </item>
